# 3d-engine

./: Cargo.toml  scene.json
editor/: Cargo.toml
editor/3D assets/Animated Characters 1/Model/: Untitled.mtl
editor/Converted assets/Animated Characters 1/Model/characterMedium_out/: characterMedium.gltf
editor/Converted assets/Animated Characters 2/Animations/run_out/: run.gltf
editor/Converted assets/Animated Characters 3/Animations/jump_out/: jump.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/astroBackpack_out/: astroBackpack.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/astroGun_out/: astroGun.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/astroHelmet_out/: astroHelmet.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/beard_out/: beard.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/cap_out/: cap.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/fantasyArmguard_out/: fantasyArmguard.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/fantasyBackpack_out/: fantasyBackpack.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/fantasyCap_out/: fantasyCap.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/fantasyHolster_out/: fantasyHolster.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/fantasyShoulderL_out/: fantasyShoulderL.gltf
editor/Converted assets/Animated Characters Bundle/Accessories/farmerCap_out/: farmerCap.gltf
editor/src/: assets.rs  main.rs
(+4856 files in other folders)
